--- a/src/main/resources/ChatterModResources/localization/eng/UIstrings.json
+++ b/src/main/resources/ChatterModResources/localization/eng/UIstrings.json
@@ -1,13 +1,10 @@
 {
   "${ModID}:ModConfigs": {
     "TEXT": [
-      "This does nothing yet.",
-      "Enable random card phrases. Defaults: true, 10%.",
-      "Enable random phrases when attacked. Defaults: true, 20%.",
-      "Enable random pre/post combat phrases. Defaults: true, 50%."
+      "This does nothing yet."
     ],
     "EXTRA_TEXT": [
-      "The Worldly Sage",
+      "Chatter Mod",
       "Text."
     ]
   }
