Change card phrasing

--- a/src/main/resources/ChatterModResources/localization/eng/Cardstrings.json
+++ b/src/main/resources/ChatterModResources/localization/eng/Cardstrings.json
@@ -9,6 +9,6 @@
   },
   "${ModID}:Chatter": {
     "NAME": "Chatter",
-    "DESCRIPTION": "Record yourself. NL Deal up to !D! damage to ALL enemies based on volume."
+    "DESCRIPTION": "Record yourself. NL Play it back to deal up to !D! damage to ALL enemies based on volume."
   }
 }
